Adding freeMemory to Memory.
freeMemory in NativeMemory and MemoryRegion are No-ops. They are only
operative in AllocMemory and in MemoryMappedFile.

Updated javadocs accordingly.